Добавляет микросетки на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
             </ul>
           </header>
           <section class=" catalog-filter" data-test="filter">
-            <h2 class="visually-hidden" hidden>Фильтры</h2>
+            <h2 class="visually-hidden">Фильтры</h2>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="catalog-filter-group infrastructure-group">
                 <legend class="fieldset-title">Инфраструктура:</legend>
@@ -140,7 +140,7 @@
               </li>
               <li class="view-button-item">
                 <a class="view-button-list" href="#">
-                  <span class="button">Показать списком</span>
+                  <span class="visually-hidden">Показать списком</span>
                 </a>
               </li>
             </ul>
