--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона. Городок в Аризоне</title>
+    <link rel="icon" href="favicon.ico" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -11,12 +12,12 @@
     <div class="page-container">
       <header class="page-header" data-test="header">
         <nav class="navigation">
-          <a class="navigation-logo" href="#">
+          <a class="navigation-logo" href="index.html">
             <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-current" href="#">Главная</a>
+              <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#"> О Седоне</a>
@@ -27,12 +28,12 @@
           </ul>
           <ul class="navigation-user">
             <li class="navigation-user-item">
-              <a class="navigation-user-link" href="#">
+              <a class="navigation-user-link user-link-search" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="navigation-user-item">
-              <a class="navigation-user-link" href="#">
+              <a class="navigation-user-link user-link-favourite" href="#">
                 <span class="visually-hidden">Отелей в избранном:</span>
                 <span class="notification-badge">12</span>
               </a>
@@ -61,8 +62,7 @@
             <li class="advantages-item advantages-item-big">
               <div class="advantages-item-big-container">
                 <h3 class="advantages-title">Настоящий городок</h3>
-                <p class="advantages-description">Седона- не аттракцион для туристов, там течет своя жизнь
-                </p>
+                <p class="advantages-description">Седона- не аттракцион для туристов, там течет своя жизнь</p>
               </div>
               <img class="advantages-img" src="images/photo/building-city.jpg" width="800" height="385"
                 alt="Здание в городе">
@@ -80,13 +80,12 @@
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item advantages-item-big">
-              <div class="advantages-item-big-container">
-                <h3 class="advantages-title">Там есть мост дьявола</h3>
-                <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется
-                </p>
-              </div>
               <img class="advantages-img" src="images/photo/diablo-bridge.jpg" width="800" height="385"
                 alt="Мост дьявола">
+              <div class="advantages-item-big-container">
+                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется</p>
+              </div>
             </li>
           </ul>
         </section>
@@ -97,16 +96,16 @@
             <p class="infrastructure-text">Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="infrastructure-list">
-            <li class="infrastructure-item house">
+            <li class="infrastructure-item housing-icon">
               <h3 class="infrastructure-title">Жилье</h3>
               <p class="infrastructure-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
-            <li class="infrastructure-item food">
+            <li class="infrastructure-item food-icon">
               <h3 class="infrastructure-title">Еда</h3>
               <p class="infrastructure-description">Всегда заказывайте топовый фирменный бургер, вы не
                 разочаруетесь!</p>
             </li>
-            <li class="infrastructure-item gifts">
+            <li class="infrastructure-item gifts-icon">
               <h3 class="infrastructure-title">Сувениры</h3>
               <p class="infrastructure-description">Не только китайского, но и настоящего местного
                 производства!</p>
@@ -122,7 +121,8 @@
         </section>
         <section class="newsletter newsletter-background" data-test="subscribe">
           <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-          <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
           <form action="https://echo.htmlacademy.ru/" class="newsletter-form">
             <p class="subscribe-form-name">
               <label for="user-email" class="visually-hidden">Ваш e-mail</label>
@@ -136,24 +136,45 @@
       <footer class="page-footer" data-test="footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
+            <a class="footer-social-link" href="https://vk.com/htmlacademy">
+              <svg aria-hidden="true" focusable="false" width="48" height="41" viewBox="0 0 48 41" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M35.1164 14.8044C35.2824 14.2584 35.1164 13.8564 34.3214 13.8564H31.6964C31.0284 13.8564 30.7204 14.2034 30.5534 14.5864C30.5534 14.5864 29.2184 17.7824 27.3274 19.8584C26.7154 20.4604 26.4374 20.6514 26.1034 20.6514C25.9364 20.6514 25.6854 20.4604 25.6854 19.9134V14.8044C25.6854 14.1484 25.5014 13.8564 24.9454 13.8564H20.8174C20.4004 13.8564 20.1494 14.1604 20.1494 14.4494C20.1494 15.0704 21.0954 15.2144 21.1924 16.9624V20.7604C21.1924 21.5934 21.0394 21.7444 20.7054 21.7444C19.8154 21.7444 17.6504 18.5334 16.3654 14.8594C16.1164 14.1444 15.8644 13.8564 15.1934 13.8564H12.5664C11.8164 13.8564 11.6664 14.2034 11.6664 14.5864C11.6664 15.2684 12.5564 18.6564 15.8114 23.1374C17.9814 26.1974 21.0364 27.8564 23.8194 27.8564C25.4884 27.8564 25.6944 27.4884 25.6944 26.8534V24.5404C25.6944 23.8034 25.8524 23.6564 26.3814 23.6564C26.7714 23.6564 27.4384 23.8484 28.9964 25.3234C30.7764 27.0724 31.0694 27.8564 32.0714 27.8564H34.6964C35.4464 27.8564 35.8224 27.4884 35.6064 26.7604C35.3684 26.0364 34.5184 24.9854 33.3914 23.7384C32.7794 23.0284 31.8614 22.2634 31.5824 21.8804C31.1934 21.3894 31.3044 21.1704 31.5824 20.7334C31.5824 20.7334 34.7824 16.3074 35.1154 14.8044H35.1164Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy">
+            <a class="footer-social-link" href="https://t.me/htmlacademy">
+              <svg aria-hidden="true" focusable="false" width="48" height="41" viewBox="0 0 48 41" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M31.785 12.9557L15.8405 19.1042C14.7523 19.5413 14.7586 20.1483 15.6408 20.419L19.7344 21.696L29.2058 15.7201C29.6537 15.4477 30.0629 15.5942 29.7265 15.8928L22.0528 22.8183H22.051L22.0528 22.8192L21.7705 27.0387C22.1841 27.0387 22.3667 26.8489 22.5987 26.625L24.5871 24.6915L28.7229 27.7464C29.4855 28.1664 30.0332 27.9506 30.2229 27.0405L32.9379 14.2453C33.2158 13.1311 32.5126 12.6266 31.785 12.9557Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <svg aria-hidden="true" focusable="false" width="48" height="41" viewBox="0 0 48 41" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M31.9402 12.3564H16.5074C14.6467 12.3564 13.3333 13.9502 13.3333 15.7564V25.8502C13.3333 27.7627 14.6467 29.3564 16.5074 29.3564H32.1591C33.8009 29.3564 35.3333 27.7627 35.3333 25.9564V15.7564C35.1143 13.9502 33.8009 12.3564 31.9402 12.3564ZM20.9949 24.8939V16.8189L28.3283 20.8564L20.9949 24.8939Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">Youtube</span>
             </a>
           </li>
         </ul>
         <a class="footer-phone" href="tel:+78128121212">+7(812) 812-12-12</a>
         <a class="copyright" href="https://htmlacademy.ru/">
-          <img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип Html-academy">
+          <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="currentColor">
+            <path fill="#000"
+              d="M0 13.2564v2.6h2.5v-2.6H0ZM11.6 4.8564c-1.6 0-2.8.7-3.6 1.7h-.1v-6.2h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.1565h-4.8v-3.7h-2v3.8h-1.9v2h1.9v5.9999c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.9565c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.5999h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.0564c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1v-12.3h-2v12.7ZM28.9 20.0564c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.3564c-.5-2.4-2.6-4.1-5.4-4.1-3.4 0-5.6 2.5-5.6 5.6 0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1c-.4 1.3-1.7 2.3-3.3 2.3-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.0564c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.1564c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.2564c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.2564c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.3564l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
+          </svg>
         </a>
       </footer>
     </div>
