--- a/index.html
+++ b/index.html
@@ -175,6 +175,90 @@
         </a>
       </footer>
     </div>
+
+    <div class="modal-container">
+      <div class="modal modal-search">
+        <button class="modal-close-button" type="button">
+          <svg width="15" height="15" viewBox="0 0 15 15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M14.4905 1.78288L13.1982 0.49057L7.49048 6.19826L1.78279 0.49057L0.490479 1.78288L6.19817 7.49057L0.490479 13.1983L1.78279 14.4906L7.49048 8.78288L13.1982 14.4906L14.4905 13.1983L8.78279 7.49057L14.4905 1.78288Z" />
+          </svg>
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+        <section class="modal-content">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label class="search-form-label" for="search-check-in">Дата заезда:</label>
+            <input class="search-form-input input-date" type="text" name="search-check-in" value="27 апреля 2020">
+            <p class="modal-filed-message modal-filed-message-error">Мы не можем отправить вас в прошлое.</p>
+            <label class="search-form-label" for="search-check-in">Дата выезда:</label>
+            <input class="search-form-input input-date" type="text" name="search-date-check-out"
+              value="1 сентября 2023">
+            <p class="modal-filed-message">На эти даты есть свободные номера. Пока есть.</p>
+            <div class="modal-age-wrapper">
+              <p class="guests-wrapper">
+                <label class="search-form-label" for="search-adults">Взрослые:</label>
+                <span class="input-number-wrapper">
+                  <button class="number-minus" type="button">
+                    <svg width="14" height="2" viewBox="0 0 14 2" fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" />
+                    </svg>
+                    <span class="visually-hidden">Уменьшить количество</span>
+                  </button>
+                  <input class="search-form-input" type="number" id="adults" name="adults" value="2">
+                  <button class="number-plus" type="button">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
+                    </svg>
+                    <span class="visually-hidden">Увеличить количество</span>
+                  </button>
+                </span>
+              </p>
+              <p class="guests-wrapper">
+                <span class="form-label-icon">
+                  <label class="search-form-label" for="search-children">Дети:</label>
+                  <span class="tooltip">
+                    <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label"></button>
+                    <span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут
+                      с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                  </span>
+                </span>
+                <span class="input-number-wrapper">
+                  <button class="number-minus" type="button">
+                    <svg width="14" height="2" viewBox="0 0 14 2" fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" />
+                    </svg>
+                    <span class="visually-hidden">Уменьшить количество</span>
+                  </button>
+                  <input class="search-form-input" type="number" id="children" name="children" value="2">
+                  <button class="number-plus" type="button">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
+                    </svg>
+                    <span class="visually-hidden">Увеличить количество</span>
+                  </button>
+                </span>
+              </p>
+            </div>
+            <button type="submit" class="search-form-button">Найти</button>
+          </form>
+        </section>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
   </body>
 
 
